--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chownr": "^2.0.0",
+    "dotenv": "^16.0.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^6.4.0",
     "next": "12.1.6",
+    "puppeteer": "^15.1.1",
+    "qr-image": "^3.2.0",
+    "qrcode-terminal": "^0.12.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tar-fs": "^2.1.1",
+    "whatsapp-web.js": "^1.17.0"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
