--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "mime-db": "^1.52.0",
     "mongoose": "^6.4.0",
     "next": "12.1.6",
     "puppeteer": "^15.1.1",
