--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.0.7",
     "chownr": "^2.0.0",
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
