--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.1",
     "@react-hook/window-size": "^3.0.7",
     "chownr": "^2.0.0",
     "dotenv": "^16.0.1",
