--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@react-hook/window-size": "^3.0.7",
+    "axios": "^0.27.2",
     "chownr": "^2.0.0",
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
@@ -21,7 +23,9 @@
     "https": "^1.0.0",
     "mime-db": "^1.52.0",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "next": "12.1.6",
+    "next-connect": "0.9.1",
     "puppeteer": "^15.1.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
@@ -32,6 +36,7 @@
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
